# longest-word

./: app.yaml  pyproject.toml  requirements.txt  wsgi.py
.github/workflows/: .app-engine-cd.yml  .python-ci.yml
longest_word/: game.py
static/: style.css
templates/: home.html
tests/: test_game.py
