[tool.poetry]
name = "longest-word"
version = "0.1.0"
description = ""
authors = ["wadiae lakhlili <wadiae.lakhlili@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.4.2"
pylint = "^3.0.2"
requests = "^2.31.0"
flask = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
